--- a/app/assets/stylesheets/generic/typography.css.sass
+++ b/app/assets/stylesheets/generic/typography.css.sass
@@ -42,3 +42,8 @@ li
 .align-right
   float: right
   padding-left: 7px
+
+@media (max-width: 720px)
+  body
+    font-size: 16px
+    line-height: 24px
