--- a/app/assets/stylesheets/modules/main.css.sass
+++ b/app/assets/stylesheets/modules/main.css.sass
@@ -145,11 +145,16 @@ section.more-info
 
 @media (max-width: 720px)
 
+  h1
+    font-size: 28px
+
   section.section
     padding: 90px 0
 
   section.logo
     padding-bottom: 135px
+    .logo-big
+      width: 120px
 
   section.meetups
 
@@ -169,8 +174,23 @@ section.more-info
 
     .member-image
       width: 100%
+      margin-bottom: 20px
 
     .member-info
-      width: 60%
-      padding: 0 20%
-      text-align: center
+      width: 100%
+      padding: 0 0
+
+  section.more-info
+    ul
+      li
+        a
+          font-size: 24px
+          line-height: 32px
+
+    ul.pseudo-footer
+      li
+        font-size: 14px
+        line-height: 22px
+        a
+          font-size: 14px
+          line-height: 22px
